Add first code for GHashTable

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,3 +6,4 @@ link_directories("/usr/local/lib")
 link_libraries(check::check)
 
 add_executable(test_gstring test_gstring.c)
+add_executable(test_ghashtable test_ghashtable.c)
