--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,3 +7,4 @@ link_libraries(check::check)
 
 add_executable(test_gstring test_gstring.c)
 add_executable(test_ghashtable test_ghashtable.c)
+add_executable(test_glist test_glist.c)
