Add preprocessor constant _CLIB_IMPL
If this constant is defined when a header file is included the
declarations AND the implementations of the functions will be included.
If it is not defined only the declarations will be included.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,3 +8,6 @@ link_libraries(check::check)
 add_executable(test_gstring test_gstring.c)
 add_executable(test_ghashtable test_ghashtable.c)
 add_executable(test_glist test_glist.c)
+
+target_link_libraries(test_ghashtable -lm)
+target_link_libraries(test_glist -lm)
