--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 
-include_directories("/usr/local/include" "../src")
-link_directories("/usr/local/lib")
+include_directories("../src")
 
-link_libraries(check::check)
+link_libraries(Check::check)
 
 add_executable(test_gstring test_gstring.c)
 add_executable(test_ghashtable test_ghashtable.c)
