Use ctest for running tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,8 +5,16 @@ include_directories("../src")
 link_libraries(Check::check)
 
 add_executable(test_gstring test_gstring.c)
-add_executable(test_ghashtable test_ghashtable.c)
-add_executable(test_glist test_glist.c)
+add_test(NAME test_gstring COMMAND test_gstring)
 
-target_link_libraries(test_ghashtable -lm)
-target_link_libraries(test_glist -lm)
+add_executable(test_ghashtable test_ghashtable.c)
+if(LINUX)
+    target_link_libraries(test_ghashtable -lm)
+endif()
+add_test(NAME test_ghashtable COMMAND test_ghashtable)
+
+add_executable(test_glist test_glist.c)
+if(LINUX)
+    target_link_libraries(test_glist -lm)
+endif()
+add_test(NAME test_glist COMMAND test_glist)
