--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -32,12 +32,13 @@ jobs:
       run: |
         echo github.event.action: ${{ github.event.action }}
         echo github.event_name: ${{ github.event_name }}
+
     - name: Install dependencies
       run: pip3 install conan
 
-    - name: Install conan dependencies
-        working-directory: ./build
-        run: conan install .
+    - name: Install Conan dependencies
+      working-directory: ./build
+      run: conan install .
 
     - name: Configure CMake
       working-directory: ./build
