Fix cmake command

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -47,12 +47,12 @@ jobs:
       working-directory: ./build
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
+      run: cmake .. -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -DENABLE_ADDRESS_SANITIZER=ON
 
     - name: Build
       # Build your program with the given configuration
       working-directory: ./build
-      run: cmake --build . --config ${{ matrix.config.build_type }} -DENABLE_ADDRESS_SANITIZER=ON
+      run: make
 
     - name: Test
       working-directory: ./build
