--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,6 +24,11 @@ jobs:
             os: macos-latest,
             build_type: Debug
           }
+        - {
+            name: "Windows",
+            os: windows-latest,
+            build_type: Debug
+          }
 
     steps:
     - uses: actions/checkout@v2
@@ -36,23 +41,39 @@ jobs:
     - name: Install dependencies
       run: pip3 install conan
 
-    - name: Create build directory
+    - name: Create build directory on Unix
+      if: ${{ !startsWith(matrix.config.name, 'Windows') }}
       run: mkdir build
+
+    - name: Create build directory on Windows
+      if: startsWith(matrix.config.name, 'Windows')
+      run: md build
 
     - name: Install Conan dependencies
       working-directory: ./build
       run: conan install .. --build=missing
 
-    - name: Configure CMake
+    - name: Configure CMake Unix
+      if: ${{ !startsWith(matrix.config.name, 'Windows') }}
       working-directory: ./build
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: cmake .. -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -DENABLE_ADDRESS_SANITIZER=ON
 
-    - name: Build
-      # Build your program with the given configuration
+    - name: Configure CMake Windows
+      if: startsWith(matrix.config.name, 'Windows')
+      working-directory: ./build
+      run: cmake .. -G "Visual Studio 17" -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -DENABLE_ADDRESS_SANITIZER=ON
+
+    - name: Build on Unix
+      if: ${{ !startsWith(matrix.config.name, 'Windows') }}
       working-directory: ./build
       run: make
+
+    - name: Build on Windows
+      if: startsWith(matrix.config.name, 'Windows')
+      working-directory: ./build
+      run: cmake --build . --config Debug
 
     - name: Test
       working-directory: ./build
