--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -79,4 +79,4 @@ jobs:
       working-directory: ./build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{ matrix.config.build_type }}
+      run: ctest -C ${{ matrix.config.build_type }} --output-on-failure
