Minor changes to CMakeLists files

--- a/perf_tests/CMakeLists.txt
+++ b/perf_tests/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-include_directories("../src")
+set(CLIB_SRC_DIR "../src")
 
 add_executable(perf_test_ghashtable perf_test_ghashtable.c)
+target_include_directories(perf_test_ghashtable PRIVATE ${CLIB_SRC_DIR})
