--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,12 +17,12 @@ jobs:
         - {
             name: "Ubuntu",
             os: ubuntu-latest,
-            build_type: Debug
+            build_type: asan
           }
         - {
             name: "macOS",
             os: macos-latest,
-            build_type: Debug
+            build_type: asan
           }
         - {
             name: "Windows",
@@ -58,7 +58,7 @@ jobs:
       working-directory: ./build
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake .. -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -DENABLE_ADDRESS_SANITIZER=ON
+      run: cmake .. -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
 
     - name: Configure CMake Windows
       if: startsWith(matrix.config.name, 'Windows')
