--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,14 @@ cmake_minimum_required(VERSION 3.10)
 set(CLIB_SRC_DIR "../src")
 
 #
+# GArray
+#
+add_executable(test_garray test_garray.c)
+target_include_directories(test_garray PRIVATE ${CLIB_SRC_DIR})
+target_link_libraries(test_garray PRIVATE Check::check)
+add_test(NAME test_garray COMMAND test_garray)
+
+#
 # GString
 #
 add_executable(test_gstring test_gstring.c)
